--- a/notebooks/01_Explore_Workflow.ipynb
+++ b/notebooks/01_Explore_Workflow.ipynb
@@ -49,8 +49,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2023-01-30 15:47:26,090][INFO]: Connecting cbroz@dss-db.datajoint.io:3306\n",
-      "[2023-01-30 15:47:26,388][INFO]: Connected cbroz@dss-db.datajoint.io:3306\n"
+      "[2023-02-09 12:59:13,967][INFO]: Connecting cbroz@dss-db.datajoint.io:3306\n",
+      "[2023-02-09 12:59:14,356][INFO]: Connected cbroz@dss-db.datajoint.io:3306\n"
      ]
     },
     {
@@ -78,23 +78,140 @@
    "execution_count": 2,
    "id": "8164c105",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[2023-01-30 15:47:26,504][WARNING]: lab.Project and related tables will be removed in a future version of Element Lab. Please use the project schema.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dj.config[\"custom\"][\"database.prefix\"] = \"cbroz_wfboss_\"\n",
     "dj.config[\"custom\"][\n",
     "    \"vol_root_data_dir\"\n",
     "] = \"/Users/cb/Documents/data/U24_SampleData/boss/\"\n",
-    "from workflow_volume.pipeline import volume, BossDBInterface\n",
+    "from workflow_volume.pipeline import volume, BossDBInterface, bossdb\n",
     "\n",
-    "volume.Volume.delete_quick()"
+    "# volume.Volume.delete_quick()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0df83dc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    \n",
+       "    <style type=\"text/css\">\n",
+       "        .Table{\n",
+       "            border-collapse:collapse;\n",
+       "        }\n",
+       "        .Table th{\n",
+       "            background: #565a72; color: #F8F8F2; padding:4px; border:#f0e0e0 1px solid;\n",
+       "            font-weight: normal; font-family: monospace; font-size: 100%;\n",
+       "        }\n",
+       "        .Table td{\n",
+       "            background: #282A36;\n",
+       "            padding:4px; border:#f0e0e0 1px solid; font-size:100%;\n",
+       "        }\n",
+       "        .Table tr:nth-child(odd){\n",
+       "            background: #44475A;\n",
+       "        }\n",
+       "        .Table tr:nth-child(even){\n",
+       "            background: #282A36;\n",
+       "        }\n",
+       "        /* Tooltip container */\n",
+       "        .djtooltip {\n",
+       "        }\n",
+       "        /* Tooltip text */\n",
+       "        .djtooltip .djtooltiptext {\n",
+       "            visibility: hidden;\n",
+       "            width: 120px;\n",
+       "            background-color: #282A36;\n",
+       "            color: #6272A4;\n",
+       "            text-align: center;\n",
+       "            padding: 5px 0;\n",
+       "            border-radius: 6px;\n",
+       "            /* Position the tooltip text - see examples below! */\n",
+       "            position: absolute;\n",
+       "            z-index: 1;\n",
+       "        }\n",
+       "        #primary {\n",
+       "            font-weight: bold;\n",
+       "            color: #BD93F9;\n",
+       "        }\n",
+       "        #nonprimary {\n",
+       "            font-weight: normal;\n",
+       "            color: #F8F8F2;\n",
+       "        }\n",
+       "\n",
+       "        /* Show the tooltip text when you mouse over the tooltip container */\n",
+       "        .djtooltip:hover .djtooltiptext {\n",
+       "            visibility: visible;\n",
+       "        }\n",
+       "    </style>\n",
+       "    \n",
+       "    <b>Dataset of a contiguous volume</b>\n",
+       "        <div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "        <table border=\"1\" class=\"Table\">\n",
+       "            <thead> <tr style=\"text-align: right;\"> <th> <div class=\"djtooltip\">\n",
+       "                            <p id=\"primary\">volume_id</p>\n",
+       "                            <span class=\"djtooltiptext\">shorthand for this volume</span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"primary\">resolution_id</p>\n",
+       "                            <span class=\"djtooltiptext\">Shorthand for convention. For BossDB, integer value.</span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"nonprimary\">subject</p>\n",
+       "                            <span class=\"djtooltiptext\"></span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"nonprimary\">session_datetime</p>\n",
+       "                            <span class=\"djtooltiptext\"></span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"nonprimary\">z_size</p>\n",
+       "                            <span class=\"djtooltiptext\">total number of voxels in z dimension</span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"nonprimary\">y_size</p>\n",
+       "                            <span class=\"djtooltiptext\">total number of voxels in y dimension</span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"nonprimary\">x_size</p>\n",
+       "                            <span class=\"djtooltiptext\">total number of voxels in x dimension</span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"nonprimary\">slicing_dimension</p>\n",
+       "                            <span class=\"djtooltiptext\">perspective of slices</span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"nonprimary\">channel</p>\n",
+       "                            <span class=\"djtooltiptext\">data type or modality (e.g., EM, segmentation, etc.)</span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"nonprimary\">url</p>\n",
+       "                            <span class=\"djtooltiptext\">dataset URL</span>\n",
+       "                        </div> </th> </tr> </thead>\n",
+       "            <tbody> <tr> <td>takemura/takemura13</td>\n",
+       "<td>4</td>\n",
+       "<td>None</td>\n",
+       "<td>None</td>\n",
+       "<td>1460</td>\n",
+       "<td>750</td>\n",
+       "<td>750</td>\n",
+       "<td>z</td>\n",
+       "<td>image</td>\n",
+       "<td>https://api.bossdb.io/v1/mgmt/resources/takemura/takemura13/image</td> </tr> </tbody>\n",
+       "        </table>\n",
+       "        \n",
+       "        <p>Total: 1</p></div>\n",
+       "        "
+      ],
+      "text/plain": [
+       "*volume_id     *resolution_id subject     session_dateti z_size     y_size     x_size     slicing_dimens channel     url           \n",
+       "+------------+ +------------+ +---------+ +------------+ +--------+ +--------+ +--------+ +------------+ +---------+ +------------+\n",
+       "takemura/takem 4              None        None           1460       750        750        z              image       https://api.bo\n",
+       " (Total: 1)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "volume.Volume()"
    ]
   },
   {
@@ -702,7 +819,193 @@
    "id": "a12b75a3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import logging\n",
+    "import numpy as np\n",
+    "from workflow_volume.pipeline import volume, bossdb, session, subject\n",
+    "from workflow_volume.paths import get_vol_root_data_dir\n",
+    "from element_volume.volume import *\n",
+    "\n",
+    "# from workflow_volume.pipeline import BossDBInterface\n",
+    "\n",
+    "# em_data = BossDBInterface(\"bossdb://Kasthuri/ac4/em\", resolution=0)\n",
+    "# seg_data = BossDBInterface(\"bossdb://Kasthuri/ac4/neuron\", resolution=0)\n",
+    "# em_data = BossDBInterface(\"bossdb://witvliet2020/Dataset_1/em\", resolution=0)\n",
+    "# seg_data = BossDBInterface(\"bossdb://witvliet2020/Dataset_1/segmentation\", resolution=0)\n",
+    "\n",
+    "logger = logging.getLogger(\"datajoint\")\n",
+    "\n",
+    "volume_key = dict(volume_id=\"Thy1\")\n",
+    "\n",
+    "\n",
+    "def drop_schemas():\n",
+    "    from datajoint_utilities.dj_search.lists import drop_schemas\n",
+    "\n",
+    "    prefix = dj.config[\"custom\"][\"database.prefix\"]\n",
+    "    drop_schemas(prefix, dry_run=False, force_drop=True)\n",
+    "\n",
+    "\n",
+    "def drop_tables():\n",
+    "    tables = [\n",
+    "        volume.Connectome,\n",
+    "        volume.ConnectomeTask,\n",
+    "        volume.ConnectomeParamset,\n",
+    "        volume.Segmentation,\n",
+    "        volume.Segmentation.Cell,\n",
+    "        volume.CellMapping,\n",
+    "        volume.SegmentationTask,\n",
+    "        volume.SegmentationParamset,\n",
+    "    ]\n",
+    "    for t in tables:\n",
+    "        t.drop_quick()\n",
+    "\n",
+    "\n",
+    "class upload:\n",
+    "    @classmethod\n",
+    "    def manual_entry(cls):\n",
+    "        from datetime import datetime\n",
+    "\n",
+    "        subject.Subject.insert1(\n",
+    "            dict(subject=\"sub1\", sex=\"M\", subject_birth_date=datetime.now()),\n",
+    "            skip_duplicates=True,\n",
+    "        )\n",
+    "        session.Session.insert1(\n",
+    "            dict(\n",
+    "                **(subject.Subject & \"subject='sub1'\").fetch1(\"KEY\"),\n",
+    "                session_id=1,\n",
+    "                session_datetime=datetime.now(),\n",
+    "            ),\n",
+    "            skip_duplicates=True,\n",
+    "        )\n",
+    "        session.SessionDirectory.insert1(\n",
+    "            dict(**session.Session.fetch1(\"KEY\"), session_dir=\"sample\"),\n",
+    "            skip_duplicates=True,\n",
+    "        )\n",
+    "        volume.Resolution.insert1(\n",
+    "            dict(\n",
+    "                resolution_id=\"990nm\",\n",
+    "                voxel_unit=\"micrometers\",\n",
+    "                voxel_z_size=1,\n",
+    "                voxel_y_size=0.5,\n",
+    "                voxel_x_size=0.5,\n",
+    "                downsampling=0,\n",
+    "            ),\n",
+    "            skip_duplicates=True,\n",
+    "        )\n",
+    "\n",
+    "        coll, exp, chann, seg = (\n",
+    "            \"DataJointTest\",\n",
+    "            \"test\",\n",
+    "            \"CalciumImaging\",\n",
+    "            \"Segmentation\",\n",
+    "        )\n",
+    "\n",
+    "        bossdb.BossDBURLs.load_bossdb_info(\n",
+    "            collection=coll,\n",
+    "            experiment=exp,\n",
+    "            volume=chann,\n",
+    "            segmentation=seg,\n",
+    "            skip_duplicates=True,\n",
+    "        )\n",
+    "        url_key = (\n",
+    "            bossdb.BossDBURLs.Volume & dict(collection_experiment=f\"{coll}/{exp}\")\n",
+    "        ).fetch1()\n",
+    "\n",
+    "        raw_data = cls.load_sample_data()\n",
+    "        raw_data_shape = raw_data.shape\n",
+    "\n",
+    "        volume.Volume.insert1(\n",
+    "            dict(\n",
+    "                volume_id=\"Thy1\",\n",
+    "                resolution_id=\"990nm\",\n",
+    "                session_id=1,\n",
+    "                z_size=raw_data_shape[0],\n",
+    "                y_size=raw_data_shape[1],\n",
+    "                x_size=raw_data_shape[2],\n",
+    "                channel=chann,\n",
+    "                **url_key,\n",
+    "                volume_data=raw_data,\n",
+    "            ),\n",
+    "            skip_duplicates=True,\n",
+    "        )\n",
+    "\n",
+    "    def load_sample_data():\n",
+    "        from tifffile import TiffFile\n",
+    "        from PIL import Image\n",
+    "        from pathlib import Path\n",
+    "\n",
+    "        root_dir = get_vol_root_data_dir()[0]\n",
+    "        image_fp = root_dir + \"sample/zstack_Gcamp_00001_00012.tif\"\n",
+    "        png_fp = root_dir + \"sample/Z%02d.png\"\n",
+    "        image_sample = TiffFile(image_fp).asarray()[250:270, 1000:1246, :]\n",
+    "        if not Path(png_fp % 0).exists():\n",
+    "            for z in range(20):\n",
+    "                Image.fromarray(image_sample[z]).save(png_fp % z)\n",
+    "        return image_sample\n",
+    "\n",
+    "    def upload_from_volume():\n",
+    "        volume.Volume.upload(volume_key)\n",
+    "        # Error uploading chunk 0-20: ndarray is not C-contiguous\n",
+    "\n",
+    "\n",
+    "class download:\n",
+    "    def add_manual_boss_url():\n",
+    "        bossdb.BossDBURLs.load_bossdb_info(\n",
+    "            collection=\"Kasthuri\",\n",
+    "            experiment=\"ac4\",\n",
+    "            volume=\"em\",\n",
+    "            segmentation=\"neuron\",\n",
+    "            skip_duplicates=True,\n",
+    "        )\n",
+    "        bossdb.BossDBURLs.load_bossdb_info(\n",
+    "            collection=\"witvliet2020\",\n",
+    "            experiment=\"Dataset_1\",\n",
+    "            volume=\"em\",\n",
+    "            segmentation=\"segmentation\",\n",
+    "            skip_duplicates=True,\n",
+    "        )\n",
+    "\n",
+    "    def download_volume_via_classmeth():\n",
+    "        volume.Volume.download(\n",
+    "            url=\"bossdb://witvliet2020/Dataset_1/em\",\n",
+    "            slice_key=\"[100:120,1000:1500,1000:1500]\",\n",
+    "            save_images=True,\n",
+    "            save_ndarray=True,\n",
+    "            image_mode=\"P\",\n",
+    "            skip_duplicates=True,\n",
+    "        )\n",
+    "\n",
+    "    def download_seg_via_classmeth():\n",
+    "        volume.SegmentationParamset.insert_new_params(\n",
+    "            segmentation_method=\"bossdb\",\n",
+    "            paramset_idx=1,\n",
+    "            params=dict(\n",
+    "                slice_key=\"[100:120,1000:1500,1000:1500]\",\n",
+    "                save_images=True,\n",
+    "                save_ndarray=True,\n",
+    "                image_mode=\"P\",\n",
+    "                skip_duplicates=True,\n",
+    "            ),\n",
+    "        )\n",
+    "        volume.SegmentationTask.insert1(\n",
+    "            dict(\n",
+    "                volume_id=\"witvliet2020/Dataset_1\",\n",
+    "                resolution_id=0,\n",
+    "                task_mode=\"load\",\n",
+    "                paramset_idx=1,\n",
+    "                **(\n",
+    "                    bossdb.BossDBURLs.Segmentation & \"collection_experiment LIKE 'wit%'\"\n",
+    "                ).fetch1(),\n",
+    "            )\n",
+    "        )\n",
+    "        volume.Segmentation.populate()\n",
+    "\n",
+    "    @classmethod\n",
+    "    def run_all(cls):\n",
+    "        cls.add_manual_boss_url()\n",
+    "        cls.download_volume_via_classmeth()\n",
+    "        cls.download_seg_via_classmeth()"
+   ]
   }
  ],
  "metadata": {
@@ -721,7 +1024,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 17:01:00) \n[Clang 13.0.1 ]"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
